bug fix in which docker swore at the -d flag